--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h2>Quick Snippet</h2>
+        <input type="text" id="search-input" placeholder="Search snippets...">
         <input type="text" id="title-input" placeholder="Enter snippet title..." />
         <textarea id="snippet-input" placeholder="Enter your code snippet here..."></textarea>
         <button id="add-snippet">Add Snippet</button>
