--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Snippet</title>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -10,13 +11,10 @@
     <div class="container">
         <h2>Quick Snippet</h2>
         <input type="text" id="search-input" placeholder="Search snippets...">
-        <input type="text" id="title-input" placeholder="Enter snippet title..." />
+        <input type="text" id="title-input" placeholder="Enter snippet title...">
         <textarea id="snippet-input" placeholder="Enter your code snippet here..."></textarea>
         <button id="add-snippet">Add Snippet</button>
-        <ul id="snippet-list">
-                </div>
-            </li>
-        </ul>
+        <ul id="snippet-list"></ul>
     </div>
     <script src="popup.js"></script>
 </body>
