Updated UI and icons on each snippet

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,8 @@
         <input type="text" id="title-input" placeholder="Enter snippet title...">
         <textarea id="snippet-input" placeholder="Enter your code snippet here..."></textarea>
         <button id="add-snippet">Add Snippet</button>
-        <ul id="snippet-list"></ul>
+        <ul id="snippet-list">
+        </ul>
     </div>
     <script src="popup.js"></script>
 </body>
