Added copied! popup message

--- a/popup.html
+++ b/popup.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <h2>Quick Snippet</h2>
-        <input type="text" id="search-input" placeholder="Search snippets...">
-        <input type="text" id="title-input" placeholder="Enter snippet title...">
-        <textarea id="snippet-input" placeholder="Enter your code snippet here..."></textarea>
+        <input type="text" id="search-input" autocomplete = 'off' placeholder="Search snippets...">
+        <input type="text" id="title-input" autocomplete = 'off' placeholder="Enter snippet title...">
+        <textarea id="snippet-input" autcomplete = 'off' placeholder="Enter your code snippet here..."></textarea>
         <button id="add-snippet">Add Snippet</button>
         <ul id="snippet-list">
         </ul>
