Added wrapping for titles, checking for unique title, and set default width, need to fix preview box formatting

--- a/popup.html
+++ b/popup.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Snippet</title>
+    <title>SnipDeck</title>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h2>Quick Snippet</h2>
+        <h2>SnipDeck</h2>
         <input type="text" id="search-input" autocomplete = 'off' placeholder="Search snippets...">
         <input type="text" id="title-input" autocomplete = 'off' placeholder="Enter snippet title...">
-        <textarea id="snippet-input" autcomplete = 'off' placeholder="Enter your code snippet here..."></textarea>
+        <textarea id="snippet-input" autcomplete = 'off' placeholder="Enter your snippet here..."></textarea>
         <button id="add-snippet">Add Snippet</button>
         <ul id="snippet-list">
         </ul>
